<resources>
    <string name="app_name">Implicit Intents</string>
    <string name="editText_uri">http://google.com</string>
    <string name="button_uri">Open Website</string>
    <string name="editText_loc">Telkom University</string>
    <string name="button_loc">Open Location</string>
    <string name="editText_share">wahahahahahah</string>
    <string name="button_share">Share This Text</string>
</resources>
